basic of tsf, but challenges of the days, could you make and convert it to fully TFS?

--- a/tfbasics.ipynb
+++ b/tfbasics.ipynb
@@ -9,10 +9,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-17 16:39:25.870379: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-03-17 16:39:25.977521: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-03-17 17:06:54.407958: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-03-17 17:06:54.504751: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-03-17 16:39:27.150527: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-03-17 17:06:55.418051: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -22,29 +22,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-03-17 17:06:57.317079: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:f3:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-03-17 17:06:57.359362: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:f3:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-03-17 17:06:57.359396: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:f3:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-03-17 17:06:57.362842: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:f3:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-03-17 17:06:57.362900: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:f3:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-03-17 17:06:57.362919: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:f3:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-03-17 17:06:57.491814: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:f3:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-03-17 17:06:57.491863: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:f3:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-03-17 17:06:57.491870: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2019] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
+      "2024-03-17 17:06:57.491896: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:f3:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-03-17 17:06:57.491922: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1928] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 1756 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3050 Ti Laptop GPU, pci bus id: 0000:f3:00.0, compute capability: 8.6\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(2, 3), dtype=int32, numpy=\n",
-       "array([[3, 5, 7],\n",
-       "       [4, 6, 8]], dtype=int32)>"
+       "<tf.Tensor: shape=(3,), dtype=int32, numpy=array([3, 5, 7], dtype=int32)>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tf.constant([[3,5,7],[4,6,8]])"
+    "tf.constant([[3, 5, 7], [4, 6, 8]])[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,16 +82,163 @@
        "        [4, 5, 6]]], dtype=int32)>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tf.constant([\n",
-    "    [[3,5,7],[4,6,8]],\n",
-    "    [[1,2,3],[4,5,6]],\n",
-    "             ])"
+    "tf.constant(\n",
+    "    [\n",
+    "        [[3, 5, 7], [4, 6, 8]],\n",
+    "        [[1, 2, 3], [4, 5, 6]],\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(4, 2, 3), dtype=int32, numpy=\n",
+       "array([[[2, 3, 4],\n",
+       "        [2, 3, 4]],\n",
+       "\n",
+       "       [[2, 3, 4],\n",
+       "        [2, 3, 4]],\n",
+       "\n",
+       "       [[2, 3, 4],\n",
+       "        [2, 3, 4]],\n",
+       "\n",
+       "       [[2, 3, 4],\n",
+       "        [2, 3, 4]]], dtype=int32)>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x1 = tf.constant([2, 3, 4])\n",
+    "x2 = tf.stack([x1, x1])\n",
+    "x3 = tf.stack([x2, x2, x2, x2])\n",
+    "x3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x4 = tf.stack([x3, x3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[3 5 7]\n",
+      " [2 4 6]], shape=(2, 3), dtype=int32)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+       "array([[3, 5],\n",
+       "       [7, 2],\n",
+       "       [4, 6]], dtype=int32)>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = tf.constant(\n",
+    "    [\n",
+    "        [3, 5, 7],\n",
+    "        [2, 4, 6],\n",
+    "    ]\n",
+    ")\n",
+    "print(x)\n",
+    "x = tf.reshape(x, [3, 2])\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Variable 'Variable:0' shape=() dtype=int32, numpy=5>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = tf.Variable(2)\n",
+    "x.assign_add(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<tf.Variable 'Variable:0' shape=(2, 1) dtype=float32, numpy=\n",
+      "array([[1.],\n",
+      "       [2.]], dtype=float32)>\n",
+      "tf.Tensor([[3. 4.]], shape=(1, 2), dtype=float32)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 2), dtype=float32, numpy=\n",
+       "array([[3., 4.],\n",
+       "       [6., 8.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w = tf.Variable(\n",
+    "    [\n",
+    "        [1.0],\n",
+    "        [2.0],\n",
+    "    ]\n",
+    ")\n",
+    "print(w)\n",
+    "x = tf.constant([[3.0, 4.0]])\n",
+    "print(x)\n",
+    "tf.matmul(w, x)"
    ]
   }
  ],
